@@ -1,3 +1,9 @@
+Tue Apr 12 11:11:41 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
+	
+	* DAnCE/ciao/Servant_Impl_Base.cpp
+
+	Fixed some compile errors with emulated exceptions.
+	
 Mon Apr 11 23:54:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplicationManager/ImplementationInfo.cpp
